--- a/test_practico_nov_2020.ipynb
+++ b/test_practico_nov_2020.ipynb
@@ -10,15 +10,15 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3-final"
+   "version": "3.9.0-final"
   },
   "orig_nbformat": 2,
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.8.3 64-bit",
+   "display_name": "Python 3.9.0 64-bit",
    "metadata": {
     "interpreter": {
-     "hash": "885e59b4117422d4ddb743cd3083a9f7c4f583d62da3718482f61dc5ec76cf03"
+     "hash": "55e468aa44997b1a111e264ecfc47cca8eaefaa39ff5edd28dad934b35afc7e9"
     }
    }
   }
@@ -42,6 +42,147 @@
    ],
    "cell_type": "markdown",
    "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 2
+    }
+   ],
+   "source": [
+    "A = 1\n",
+    "b =1 \n",
+    "c = 2\n",
+    "d = A==b\n",
+    "d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "dict_items([('k', 'v'), ('k1', 'v1')])\n"
+     ]
+    }
+   ],
+   "source": [
+    "diccionario= {\"k\":\"v\", \"k1\":\"v1\"}\n",
+    "diccionario[\"k\"]\n",
+    "x=(diccionario.items())\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "k\nk1\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in diccionario:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lista_1 =[1, 2, 3]\n",
+    "lista_2 = [4,5,6]\n",
+    "lista_3 =lista_1+lista_2\n",
+    "lista_3\n",
+    "lista_3 = [len(lista_3)]\n",
+    "print(lista_3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "(1, 2, 3, 4)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 67
+    }
+   ],
+   "source": [
+    "tupla1= (1, 2)\n",
+    "tupla2 = (3, 4)\n",
+    "tupla3 = tupla1 + tupla2\n",
+    "tupla3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for x in lista_3:\n",
+    "    if None:\n",
+    "        print (x)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "TypeError",
+     "evalue": "can only concatenate str (not \"int\") to str",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-77-6e514b5e5dcf>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0ma\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m4\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0my\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"manzanas\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[1;34m\"compre\"\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0ma\u001b[0m\u001b[1;33m+\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: can only concatenate str (not \"int\") to str"
+     ]
+    }
+   ],
+   "source": [
+    "a = 4 \n",
+    "y = \"manzanas\"\n",
+    "\"compre\" + a+ y"
+   ]
   },
   {
    "source": [
@@ -118,11 +259,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[5,\n",
+       " 'F',\n",
+       " True,\n",
+       " None,\n",
+       " ['pelota', 'crema de sol', 'radio', ' gafas de nadar'],\n",
+       " ('confort colors', 'ni idea', 'zapatillas de andar por casa'),\n",
+       " {'nombre': 'Javier', 'edad': 22},\n",
+       " 9.55]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 11
+    }
+   ],
    "source": [
-    " # tu respuesta aquí"
+    " # tu respuesta aquí\n",
+    "num_dni = 5\n",
+    "let_dni = \"F\"\n",
+    "tipo_ord= True\n",
+    "nada = None\n",
+    "lista_deseo = [\"pelota\",\"crema de sol\", \"radio\", \" gafas de nadar\"]\n",
+    "tupla_ropa = ( \"confort colors\", \"ni idea\", \"zapatillas de andar por casa\")\n",
+    "dict_info = {\"nombre\": \"Javier\", \"edad\": 22}\n",
+    "flo_hor = 09.55\n",
+    "\n",
+    "lista_examen =[]\n",
+    "lista_examen.append(num_dni)\n",
+    "lista_examen.append(let_dni)\n",
+    "lista_examen.append(tipo_ord)\n",
+    "lista_examen.append(nada)\n",
+    "lista_examen.append(lista_deseo)\n",
+    "lista_examen.append(tupla_ropa)\n",
+    "lista_examen.append(dict_info)\n",
+    "lista_examen.append(flo_hor)\n",
+    "lista_examen"
    ]
   },
   {
@@ -146,11 +324,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "crema de sol\n"
+     ]
+    }
+   ],
    "source": [
-    "# tu respuesta aquí"
+    "# tu respuesta aquí\n",
+    "print(lista_examen[4][1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "zapatillas de andar por casa\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(lista_examen[5][-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Javier\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(lista_examen[6][\"nombre\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Javier5\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(lista_examen[6][\"nombre\"], lista_examen[0],sep=\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "espero que se pueda usar if\n"
+     ]
+    }
+   ],
+   "source": [
+    "if lista_examen[6][\"edad\"]>20 and lista_examen[0]>7 and lista_examen[2] == False:\n",
+    "    print(lista_examen[5])\n",
+    "else:\n",
+    "    print('espero que se pueda usar if')"
    ]
   },
   {
@@ -165,11 +423,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "5\nF\nTrue\nNone\n['pelota', 'crema de sol', 'radio', ' gafas de nadar']\n('confort colors', 'ni idea', 'zapatillas de andar por casa')\n{'nombre': 'Javier', 'edad': 22}\n9.55\n"
+     ]
+    }
+   ],
    "source": [
-    "# tu respuesta aquí"
+    "# tu respuesta aquí\n",
+    "for x in lista_examen:\n",
+    "    print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "pelota\ncrema de sol\nradio\n gafas de nadar\n"
+     ]
+    }
+   ],
+   "source": [
+    "for x in lista_examen:\n",
+    "    if type(x)==list:\n",
+    "        for y in x:\n",
+    "            print(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "5\nF\nTrue\nNone\n"
+     ]
+    }
+   ],
+   "source": [
+    "for pos, val in enumerate(lista_examen):\n",
+    "    if pos <4:\n",
+    "        print(val)"
    ]
   },
   {
@@ -183,11 +490,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "confort colors -->ni idea -->zapatillas de andar por casa -->5\n"
+     ]
+    }
+   ],
    "source": [
-    "# tu respuesta aquí"
+    "# tu respuesta aquí\n",
+    "acum = 0 \n",
+    "while acum < len(lista_examen):\n",
+    "    if type(lista_examen[acum]) == tuple:\n",
+    "        for x in lista_examen[acum]:\n",
+    "            print(x,\"-->\", end=\"\")\n",
+    "        print(acum)\n",
+    "        acum+=1\n",
+    "    else:\n",
+    "        acum+=1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "{'nombre': 'Javier', 'edad': 22}\n6\n"
+     ]
+    }
+   ],
+   "source": [
+    "acum = 0 \n",
+    "while acum < len(lista_examen):\n",
+    "    if type(lista_examen[acum])== dict:\n",
+    "        x = lista_examen[acum].keys()\n",
+    "        y = lista_examen[acum].values()\n",
+    "        z =zip (x,y)\n",
+    "        z = dict(z)\n",
+    "        print(z)\n",
+    "        print(acum)\n",
+    "        acum+=1\n",
+    "    else: \n",
+    "        acum+=1"
    ]
   },
   {
@@ -208,11 +560,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# tu respuesta aquí"
+    "# tu respuesta aquí\n",
+    "class Humano:\n",
+    "    def __init__(self, edad, altura, nombre):\n",
+    "        self.edad = edad\n",
+    "        self.altura = altura\n",
+    "        self.nombre = nombre\n",
+    "\n",
+    "    def cumplir_edad(self):\n",
+    "        edad_antigua = self.edad\n",
+    "        self.edad = self.edad +1\n",
+    "        print(edad_antigua, \"felicidades ahora tienes:\", self.edad)\n",
+    "    \n",
+    "    def registro_nombre(self, nuevo_nombre):\n",
+    "        nombre_antiguo = self.nombre\n",
+    "        self.nombre = nuevo_nombre\n",
+    "        print(nombre_antiguo, \"ahora te llamas\", self.nombre)\n",
+    "     \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Wolfram = Humano(edad=23, altura=173, nombre= \"Wolfram\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "23 felicidades ahora tienes: 24\n"
+     ]
+    }
+   ],
+   "source": [
+    "Wolfram.cumplir_edad()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Wolfram ahora te llamas Benicio\n"
+     ]
+    }
+   ],
+   "source": [
+    "Wolfram.registro_nombre(\"Benicio\")"
    ]
   },
   {
@@ -242,6 +653,34 @@
    ],
    "cell_type": "markdown",
    "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "h3o3l3a3\n"
+     ]
+    }
+   ],
+   "source": [
+    "def reverse_number(cadena, n):\n",
+    "    acum = len(cadena)-1\n",
+    "    d = \"\"\n",
+    "    \n",
+    "    while acum >-1:\n",
+    "        n = str(n)\n",
+    "        z = cadena[acum]\n",
+    "        x = z+n\n",
+    "        d+= x\n",
+    "        acum+=-1\n",
+    "    return d\n",
+    "print(reverse_number(cadena=\"aloh\", n=3))"
+   ]
   },
   {
    "cell_type": "code",
