--- a/week8/day5/exercises/3.regression_classification_exercise.ipynb
+++ b/week8/day5/exercises/3.regression_classification_exercise.ipynb
@@ -73,6 +73,46 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def choose_model(option_user, params=None):\n",
+    "    option_user= input()\n",
+    "    from sklearn import           linear_model\n",
+    "    from sklearn import model_selection\n",
+    "    from sklearn.metrics import classification_report\n",
+    "    params = {'k': 7}\n",
+    "    x = LinearRegression()\n",
+    "    y = linear_model.LogisticRegression()\n",
+    "    z = KNeighborsClassifier(n_neighbors=k)\n",
+    "    if option_user == 'LinearRegression':\n",
+    "        model=x\n",
+    "        return model\n",
+    "    elif option_user == 'LogisticRegression':\n",
+    "        model=y\n",
+    "        return model\n",
+    "    elif option_user == 'Knn':\n",
+    "        model=z\n",
+    "        return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_model(model, df, target_name):\n",
+    "    X = df.drop([target_name])\n",
+    "    y = df[target_name]\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)  \n",
+    "    # your code\n",
+    "    return model_trained, accuracy"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
