--- a/week9/day2/theory/classification_svm.ipynb
+++ b/week9/day2/theory/classification_svm.ipynb
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -436,9 +436,13 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3.6.4 64-bit",
-   "language": "python",
-   "name": "python_defaultSpec_1599467679860"
+   "name": "python3",
+   "display_name": "Python 3.9.0 64-bit",
+   "metadata": {
+    "interpreter": {
+     "hash": "55e468aa44997b1a111e264ecfc47cca8eaefaa39ff5edd28dad934b35afc7e9"
+    }
+   }
   },
   "language_info": {
    "codemirror_mode": {
@@ -450,7 +454,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "3.6.4-final"
+   "version": "3.9.0-final"
   }
  },
  "nbformat": 4,
