--- a/week9/day2/theory/non-linear_regression_SVM.ipynb
+++ b/week9/day2/theory/non-linear_regression_SVM.ipynb
@@ -52,7 +52,9 @@
     "# Generate sample data\n",
     "X = np.sort(5 * np.random.rand(40, 1), axis=0)\n",
     "y = np.sin(X).ravel()\n",
-    "\n",
+    "x_tarin, y_train\n",
+    "x_tes, y_test\n",
+    "fit(X, y)\n",
     "# #############################################################################\n",
     "# Add noise to targets\n",
     "y[::5] += 3 * (0.5 - np.random.rand(8))\n",
