--- a/week9/day4/theory/grid_search.ipynb
+++ b/week9/day4/theory/grid_search.ipynb
@@ -14,8 +14,13 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python_defaultSpec_1599639598500",
-   "display_name": "Python 3.6.4 64-bit"
+   "name": "python3",
+   "display_name": "Python 3.6.4 64-bit",
+   "metadata": {
+    "interpreter": {
+     "hash": "5c4d2f1fdcd3716c7a5eea90ad07be30193490dd4e63617705244f5fd89ea793"
+    }
+   }
   }
  },
  "nbformat": 4,
@@ -49,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 53,
    "metadata": {
     "tags": []
    },
@@ -68,7 +73,9 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "clf.best_stimator_ SVC(C=0.5, cache_size=200, class_weight=None, coef0=-10.0,\n    decision_function_shape='ovr', degree=1, gamma='scale', kernel='linear',\n    max_iter=-1, probability=False, random_state=None, shrinking=True,\n    tol=0.001, verbose=False)\nclf.best_params_ {'C': 0.5, 'coef0': -10.0, 'degree': 1, 'gamma': 'scale', 'kernel': 'linear'}\nclf.best_score 0.9866666666666667\n"
+     "text": [
+      "clf.best_stimator_ SVC(C=0.5, coef0=-10.0, degree=1, kernel='linear')\nclf.best_params_ {'C': 0.5, 'coef0': -10.0, 'degree': 1, 'gamma': 'scale', 'kernel': 'linear'}\nclf.best_score 0.9866666666666667\n"
+     ]
     }
    ],
    "source": [
@@ -79,7 +86,7 @@
     "# 'kernel':('linear', 'poly', 'rbf', 'sigmoid'), \n",
     "\n",
     "parameters = {\n",
-    "    'kernel':('linear', 'rbf', 'sigmoid'), \n",
+    "    'kernel': ('linear', 'rbf', 'sigmoid'), \n",
     "    'C':[0.0001,0.1, 0.5, 1, 5, 10, 100], \n",
     "    'degree': [1,2,3,4,5,6,7,8,9],\n",
     "    'coef0': [-10.,-1., 0., 0.1, 0.5, 1, 10, 100],\n",
@@ -89,7 +96,10 @@
     "svc = svm.SVC()\n",
     "\n",
     "clf = GridSearchCV(estimator=svc, param_grid=parameters, n_jobs=-1, cv=10)\n",
-    "clf.fit(iris.data, iris.target)\n",
+    "\n",
+    "X = iris.data\n",
+    "y = iris.target\n",
+    "clf.fit(X, y)\n",
     "\n",
     "print(\"clf.best_stimator_\", clf.best_estimator_)\n",
     "print(\"clf.best_params_\", clf.best_params_)\n",
@@ -108,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +207,7 @@
     "    'classifier__gamma': ('scale', 'auto')\n",
     "    }\n",
     "\n",
-    "\n",
+    "# hypertuning \n",
     "# Create space of candidate learning algorithms and their hyperparameters\n",
     "search_space = [\n",
     "    logistic_params,\n",
@@ -208,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 60,
    "metadata": {
     "tags": []
    },
@@ -216,7 +226,9 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "\n############################\n\nbest estimator: SVC(C=0.5, cache_size=200, class_weight=None, coef0=-10.0,\n    decision_function_shape='ovr', degree=1, gamma='scale', kernel='linear',\n    max_iter=-1, probability=False, random_state=None, shrinking=True,\n    tol=0.001, verbose=False)\n\n############################\n\nclf.best_params_ {'classifier': SVC(C=0.5, cache_size=200, class_weight=None, coef0=-10.0,\n    decision_function_shape='ovr', degree=1, gamma='scale', kernel='linear',\n    max_iter=-1, probability=False, random_state=None, shrinking=True,\n    tol=0.001, verbose=False), 'classifier__C': 0.5, 'classifier__coef0': -10.0, 'classifier__degree': 1, 'classifier__gamma': 'scale', 'classifier__kernel': 'linear'}\n\n############################\n\nclf.best_score 0.9916666666666667\nWall time: 15.8 s\n"
+     "text": [
+      "\n############################\n\nbest estimator: SVC(C=0.5, coef0=-10.0, degree=1, kernel='linear')\n\n############################\n\nclf.best_params_ {'classifier': SVC(C=0.5, coef0=-10.0, degree=1, kernel='linear'), 'classifier__C': 0.5, 'classifier__coef0': -10.0, 'classifier__degree': 1, 'classifier__gamma': 'scale', 'classifier__kernel': 'linear'}\n\n############################\n\nclf.best_score 0.9916666666666666\nWall time: 26.5 s\n"
+     ]
     }
    ],
    "source": [
@@ -228,6 +240,7 @@
     "\n",
     "# Fit grid search\n",
     "best_model = clf.fit(X_train, y_train)\n",
+    "\n",
     "# View best model\n",
     "separator = \"\\n############################\\n\"\n",
     "print(separator)\n",
@@ -245,30 +258,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
-    "loaded_model = pickle.load(file=\"finished_model.sav\")"
+    "path = os.getcwd() + os.sep\n",
+    "full_file_name = path + \"finished_model.sav\"\n",
+    "loaded_model = pickle.load(open(full_file_name, 'rb'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "100.0"
+      "text/plain": [
+       "100.0"
+      ]
      },
      "metadata": {},
-     "execution_count": 23
+     "execution_count": 62
     }
    ],
    "source": [
     "# Predict target vector\n",
     "best_model.score(X_test, y_test) * 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "sklearn.model_selection._search.GridSearchCV"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 63
+    }
+   ],
+   "source": [
+    "type(loaded_model)"
    ]
   },
   {
@@ -280,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 64,
    "metadata": {
     "tags": []
    },
@@ -304,7 +341,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "0 0 \n",
+    "0 0 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,15 +360,18 @@
     "    X, y, test_size=0.5, random_state=0)\n",
     "\n",
     "# Set the parameters by cross-validation\n",
-    "tuned_parameters = [{'kernel': ['rbf'], 'gamma': [1e-3, 1e-4], 'C': [1, 10, 100, 1000]},\n",
-    "                    {'kernel': ['linear'], 'C': [1, 10, 100, 1000]}]\n",
+    "tuned_parameters = [{'kernel': ['rbf'], \n",
+    "                    'gamma': [1e-3, 1e-4], \n",
+    "                    'C': [1, 10, 100, 1000]},\n",
+    "                    {'kernel': ['linear'], \n",
+    "                    'C': [1, 10, 100, 1000]}]\n",
     "\n",
     "scores = ['precision', 'recall']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 68,
    "metadata": {
     "tags": []
    },
@@ -329,7 +379,100 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "######################################\n########## SCORE precision ########### \n######################################\n# Tuning hyper-parameters for precision\n\nBest parameters set found on development set:\n\n{'C': 10, 'gamma': 0.001, 'kernel': 'rbf'}\n\nGrid scores on development set:\n\n0.983 (+/-0.015) for {'C': 1, 'gamma': 0.001, 'kernel': 'rbf'}\n0.956 (+/-0.027) for {'C': 1, 'gamma': 0.0001, 'kernel': 'rbf'}\n0.985 (+/-0.014) for {'C': 10, 'gamma': 0.001, 'kernel': 'rbf'}\n0.981 (+/-0.020) for {'C': 10, 'gamma': 0.0001, 'kernel': 'rbf'}\n0.985 (+/-0.014) for {'C': 100, 'gamma': 0.001, 'kernel': 'rbf'}\n0.981 (+/-0.019) for {'C': 100, 'gamma': 0.0001, 'kernel': 'rbf'}\n0.985 (+/-0.014) for {'C': 1000, 'gamma': 0.001, 'kernel': 'rbf'}\n0.981 (+/-0.019) for {'C': 1000, 'gamma': 0.0001, 'kernel': 'rbf'}\n0.976 (+/-0.002) for {'C': 1, 'kernel': 'linear'}\n0.976 (+/-0.002) for {'C': 10, 'kernel': 'linear'}\n0.976 (+/-0.002) for {'C': 100, 'kernel': 'linear'}\n0.976 (+/-0.002) for {'C': 1000, 'kernel': 'linear'}\nDetailed classification report:\n\nThe model is trained on the full development set.\nThe scores are computed on the full evaluation set.\n\n              precision    recall  f1-score   support\n\n           0       1.00      1.00      1.00        89\n           1       0.97      1.00      0.98        90\n           2       0.99      0.98      0.98        92\n           3       1.00      0.99      0.99        93\n           4       1.00      1.00      1.00        76\n           5       0.99      0.98      0.99       108\n           6       0.99      1.00      0.99        89\n           7       0.99      1.00      0.99        78\n           8       1.00      0.98      0.99        92\n           9       0.99      0.99      0.99        92\n\n    accuracy                           0.99       899\n   macro avg       0.99      0.99      0.99       899\nweighted avg       0.99      0.99      0.99       899\n\n\n######################################\n########## SCORE recall ########### \n######################################\n# Tuning hyper-parameters for recall\n\nBest parameters set found on development set:\n\n{'C': 10, 'gamma': 0.001, 'kernel': 'rbf'}\n\nGrid scores on development set:\n\n0.982 (+/-0.016) for {'C': 1, 'gamma': 0.001, 'kernel': 'rbf'}\n0.953 (+/-0.027) for {'C': 1, 'gamma': 0.0001, 'kernel': 'rbf'}\n0.984 (+/-0.016) for {'C': 10, 'gamma': 0.001, 'kernel': 'rbf'}\n0.981 (+/-0.020) for {'C': 10, 'gamma': 0.0001, 'kernel': 'rbf'}\n0.984 (+/-0.016) for {'C': 100, 'gamma': 0.001, 'kernel': 'rbf'}\n0.980 (+/-0.019) for {'C': 100, 'gamma': 0.0001, 'kernel': 'rbf'}\n0.984 (+/-0.016) for {'C': 1000, 'gamma': 0.001, 'kernel': 'rbf'}\n0.980 (+/-0.019) for {'C': 1000, 'gamma': 0.0001, 'kernel': 'rbf'}\n0.974 (+/-0.005) for {'C': 1, 'kernel': 'linear'}\n0.974 (+/-0.005) for {'C': 10, 'kernel': 'linear'}\n0.974 (+/-0.005) for {'C': 100, 'kernel': 'linear'}\n0.974 (+/-0.005) for {'C': 1000, 'kernel': 'linear'}\nDetailed classification report:\n\nThe model is trained on the full development set.\nThe scores are computed on the full evaluation set.\n\n              precision    recall  f1-score   support\n\n           0       1.00      1.00      1.00        89\n           1       0.97      1.00      0.98        90\n           2       0.99      0.98      0.98        92\n           3       1.00      0.99      0.99        93\n           4       1.00      1.00      1.00        76\n           5       0.99      0.98      0.99       108\n           6       0.99      1.00      0.99        89\n           7       0.99      1.00      0.99        78\n           8       1.00      0.98      0.99        92\n           9       0.99      0.99      0.99        92\n\n    accuracy                           0.99       899\n   macro avg       0.99      0.99      0.99       899\nweighted avg       0.99      0.99      0.99       899\n\n\n"
+     "text": [
+      "######################################\n",
+      "########## SCORE precision ########### \n",
+      "######################################\n",
+      "# Tuning hyper-parameters for precision\n",
+      "\n",
+      "Best parameters set found on development set:\n",
+      "\n",
+      "{'C': 10, 'gamma': 0.001, 'kernel': 'rbf'}\n",
+      "\n",
+      "Grid scores on development set:\n",
+      "\n",
+      "0.986 (+/-0.016) for {'C': 1, 'gamma': 0.001, 'kernel': 'rbf'}\n",
+      "0.959 (+/-0.028) for {'C': 1, 'gamma': 0.0001, 'kernel': 'rbf'}\n",
+      "0.988 (+/-0.017) for {'C': 10, 'gamma': 0.001, 'kernel': 'rbf'}\n",
+      "0.982 (+/-0.026) for {'C': 10, 'gamma': 0.0001, 'kernel': 'rbf'}\n",
+      "0.988 (+/-0.017) for {'C': 100, 'gamma': 0.001, 'kernel': 'rbf'}\n",
+      "0.983 (+/-0.026) for {'C': 100, 'gamma': 0.0001, 'kernel': 'rbf'}\n",
+      "0.988 (+/-0.017) for {'C': 1000, 'gamma': 0.001, 'kernel': 'rbf'}\n",
+      "0.983 (+/-0.026) for {'C': 1000, 'gamma': 0.0001, 'kernel': 'rbf'}\n",
+      "0.974 (+/-0.012) for {'C': 1, 'kernel': 'linear'}\n",
+      "0.974 (+/-0.012) for {'C': 10, 'kernel': 'linear'}\n",
+      "0.974 (+/-0.012) for {'C': 100, 'kernel': 'linear'}\n",
+      "0.974 (+/-0.012) for {'C': 1000, 'kernel': 'linear'}\n",
+      "Detailed classification report:\n",
+      "\n",
+      "The model is trained on the full development set.\n",
+      "The scores are computed on the full evaluation set.\n",
+      "\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      1.00      1.00        89\n",
+      "           1       0.97      1.00      0.98        90\n",
+      "           2       0.99      0.98      0.98        92\n",
+      "           3       1.00      0.99      0.99        93\n",
+      "           4       1.00      1.00      1.00        76\n",
+      "           5       0.99      0.98      0.99       108\n",
+      "           6       0.99      1.00      0.99        89\n",
+      "           7       0.99      1.00      0.99        78\n",
+      "           8       1.00      0.98      0.99        92\n",
+      "           9       0.99      0.99      0.99        92\n",
+      "\n",
+      "    accuracy                           0.99       899\n",
+      "   macro avg       0.99      0.99      0.99       899\n",
+      "weighted avg       0.99      0.99      0.99       899\n",
+      "\n",
+      "\n",
+      "######################################\n",
+      "########## SCORE recall ########### \n",
+      "######################################\n",
+      "# Tuning hyper-parameters for recall\n",
+      "\n",
+      "Best parameters set found on development set:\n",
+      "\n",
+      "{'C': 10, 'gamma': 0.001, 'kernel': 'rbf'}\n",
+      "\n",
+      "Grid scores on development set:\n",
+      "\n",
+      "0.986 (+/-0.019) for {'C': 1, 'gamma': 0.001, 'kernel': 'rbf'}\n",
+      "0.957 (+/-0.028) for {'C': 1, 'gamma': 0.0001, 'kernel': 'rbf'}\n",
+      "0.987 (+/-0.019) for {'C': 10, 'gamma': 0.001, 'kernel': 'rbf'}\n",
+      "0.981 (+/-0.028) for {'C': 10, 'gamma': 0.0001, 'kernel': 'rbf'}\n",
+      "0.987 (+/-0.019) for {'C': 100, 'gamma': 0.001, 'kernel': 'rbf'}\n",
+      "0.982 (+/-0.026) for {'C': 100, 'gamma': 0.0001, 'kernel': 'rbf'}\n",
+      "0.987 (+/-0.019) for {'C': 1000, 'gamma': 0.001, 'kernel': 'rbf'}\n",
+      "0.982 (+/-0.026) for {'C': 1000, 'gamma': 0.0001, 'kernel': 'rbf'}\n",
+      "0.971 (+/-0.010) for {'C': 1, 'kernel': 'linear'}\n",
+      "0.971 (+/-0.010) for {'C': 10, 'kernel': 'linear'}\n",
+      "0.971 (+/-0.010) for {'C': 100, 'kernel': 'linear'}\n",
+      "0.971 (+/-0.010) for {'C': 1000, 'kernel': 'linear'}\n",
+      "Detailed classification report:\n",
+      "\n",
+      "The model is trained on the full development set.\n",
+      "The scores are computed on the full evaluation set.\n",
+      "\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      1.00      1.00        89\n",
+      "           1       0.97      1.00      0.98        90\n",
+      "           2       0.99      0.98      0.98        92\n",
+      "           3       1.00      0.99      0.99        93\n",
+      "           4       1.00      1.00      1.00        76\n",
+      "           5       0.99      0.98      0.99       108\n",
+      "           6       0.99      1.00      0.99        89\n",
+      "           7       0.99      1.00      0.99        78\n",
+      "           8       1.00      0.98      0.99        92\n",
+      "           9       0.99      0.99      0.99        92\n",
+      "\n",
+      "    accuracy                           0.99       899\n",
+      "   macro avg       0.99      0.99      0.99       899\n",
+      "weighted avg       0.99      0.99      0.99       899\n",
+      "\n",
+      "\n"
+     ]
     }
    ],
    "source": [
@@ -339,7 +482,7 @@
     "    print(\"# Tuning hyper-parameters for %s\" % score)\n",
     "    print()\n",
     "\n",
-    "    clf = GridSearchCV(estimator=SVC(), param_grid=tuned_parameters, scoring='%f_macro'%score)\n",
+    "    clf = GridSearchCV(estimator=SVC(), param_grid=tuned_parameters, scoring=str(score)+'_macro')\n",
     "    clf.fit(X_train, y_train)\n",
     "\n",
     "    print(\"Best parameters set found on development set:\")\n",
