--- a/week8/day5/exercises/3.regression_classification_exercise.ipynb
+++ b/week8/day5/exercises/3.regression_classification_exercise.ipynb
@@ -79,11 +79,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn import           linear_model\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LinearRegression\n",
     "from sklearn import model_selection\n",
     "from sklearn.metrics import classification_report\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
@@ -91,26 +92,23 @@
     "from sklearn import metrics\n",
     "from sklearn.metrics import r2_score, mean_absolute_error, accuracy_score\n",
     "from sklearn import linear_model\n",
-    "from sklearn import model_selection\n",
-    "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.metrics import classification_report"
+    "from sklearn.metrics import classification_report\n",
+    "import pandas as pd \n",
+    "import numpy as np "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "def choose_model(option_user, params=None):\n",
     "    # Define parameter\n",
-    "    option_user= input()\n",
-    "    params = {'k': 7, 'n_splits': 10, 'random_state': 7}\n",
     "    # nombrar los modelos\n",
     "    x = LinearRegression()\n",
     "    y = linear_model.LogisticRegression()\n",
-    "    z = KNeighborsClassifier(n_neighbors=k)\n",
+    "    z = KNeighborsClassifier(n_neighbors=params['k'])\n",
     "    # que modelo se escoge\n",
     "    if option_user == 'LinearRegression':\n",
     "        model=x\n",
@@ -125,53 +123,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "LinearRegression()"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 56
+    }
+   ],
+   "source": [
+    "choose_model(option_user='LinearRegression', params={'k': 7, 'n_splits': 10, 'random_state': 7})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train_model(model, df, target_name):\n",
-    "\n",
-    "    X = df.drop([target_name])\n",
-    "    y = df[target_name]\n",
+    "def train_model(model, df, target_name, n_splits, random_state, params):\n",
+    "    # Pasar los df a np.array para los modelos\n",
+    "    X=  np.array(df.drop([target_name], 1))\n",
+    "    y =np.array(a mi no)\n",
     "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)\n",
     "    # Definir los distintos modelos\n",
     "    # Definir acuracy          \n",
-    "    if model == 'LinearRegression':\n",
-    "        model_trained = model.fit(X, y)\n",
-    "        kfold = model_selection.KFold(n_splits=10, random_state=seed)\n",
-    "        cv_results = model_selection.cross_val_score(model, X_train, Y_train, cv=kfold, scoring='accuracy')\n",
-    "        msg = \"%s: %f (%f)\" % (name, cv_results.mean(), cv_results.std())\n",
-    "        predictions = model.predict(X_test)\n",
-    "        accuracy = metrics.accuracy_score(y_test, y_pred)\n",
-    "        return model_trained, accuracy\n",
-    "    if model == 'LogisticRegression':\n",
-    "        model.fit(X,y)\n",
-    "        kfold = model_selection.KFold(n_splits=10, random_state=seed)\n",
-    "        cv_results = model_selection.cross_val_score(model, X_train, Y_train, cv=kfold, scoring='accuracy')\n",
-    "        msg = \"%s: %f (%f)\" % (name, cv_results.mean(), cv_results.std())\n",
-    "        predictions = model.predict(X_test)\n",
-    "        accuracy = metrics.accuracy_score(y_test, y_pred)\n",
-    "        return model_trained, accuracy\n",
-    "    if model == 'Knn':\n",
+    "    if model == LinearRegression():\n",
+    "        \n",
     "        model.fit(X_train, y_train)\n",
+    "        print('#################\\n', 'Model fit score', model.score(X_train, y_train), '\\n###############' )\n",
+    "        \n",
+    "        kfold = model_selection.KFold(n_splits=10, random_state=seed)\n",
+    "        cv_results = model_selection.cross_val_score(model, X_train, y_train, cv=kfold, scoring='accuracy')\n",
+    "        msg = \"%s: %f (%f)\" % (name, cv_results.mean(), cv_results.std())\n",
+    "        print('#################\\n', 'MSG', msg, '\\n###############' )\n",
+    "        \n",
     "        y_pred = model.predict(X_test)\n",
     "        accuracy = metrics.accuracy_score(y_test, y_pred)\n",
+    "        print('#################\\n', 'Model test score', accuracy, '\\n###############' )\n",
+    "        \n",
+    "        model_trained= pd.DataFrame({\"Target\": y, \"Preiction\": y_pred})\n",
+    "        \n",
+    "        return model_trained, accuracy\n",
+    "    \n",
+    "    elif model == linear_model.LogisticRegression():\n",
+    "        \n",
+    "        model.fit(X_train, y_train)\n",
+    "        print('#################\\n', 'Model fit score', model.score(X_train, y_train), '\\n###############' )\n",
+    "        \n",
+    "        kfold = model_selection.KFold(n_splits=10, random_state=seed)\n",
+    "        cv_results = model_selection.cross_val_score(model, X_train, y_train, cv=kfold, scoring='accuracy')\n",
+    "        msg = \"%s: %f (%f)\" % (name, cv_results.mean(), cv_results.std())\n",
+    "        print('#################\\n', 'MSG', msg, '\\n###############' )\n",
+    "        \n",
+    "        y_pred = model.predict(X_test)\n",
+    "        accuracy = metrics.accuracy_score(y_test, y_pred)\n",
+    "        print('#################\\n', 'Model test score', accuracy, '\\n###############' )\n",
+    "        \n",
+    "        model_trained= pd.DataFrame({\"Target\": y, \"Preiction\": y_pred})\n",
+    "        \n",
+    "        return model_trained, accuracy\n",
+    "    \n",
+    "    elif model == KNeighborsClassifier(n_neighbors=params['k']):\n",
+    "        \n",
+    "        model.fit(X_train, y_train)\n",
+    "        print('#################\\n', 'Model fit score', model.score(X_train, y_train), '\\n###############' )\n",
+    "        \n",
+    "        y_pred = model.predict(X_test)\n",
+    "        accuracy = metrics.accuracy_score(y_test, y_pred)\n",
+    "        print('#################\\n', 'Model test score', accuracy, '\\n###############' )\n",
+    "        \n",
+    "        model_trained= pd.DataFrame({\"Target\": y, \"Preiction\": y_pred})\n",
+    "        \n",
     "        return model_trained, accuracy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def main(option_user,model, df, target_name, params=None):\n",
+    "train_model(model= LinearRegression(), df= df, target_name= 'variety', n_splits=10, random_state=15, params={'k': 7, 'n_splits': 10, 'random_state': 7})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def main(option_user, df, target_name, params=None, n_splits= 10, random_state= 15):\n",
     "    #Invocar las funciones \n",
-    "    choose_model(option_user=option_user, params=params)\n",
-    "    train_model(model= model, df=df, target_name=target)\n",
+    "    model= choose_model(option_user=option_user, params=params)\n",
+    "    model_trained = train_model(model= model, df=df, target_name=target_name, n_splits=n_splits, random_state=random_state, params=params)\n",
     "    # your code\n",
-    "    print(accuracy)\n",
     "    return model_trained"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"C:\\\\Users\\\\javig\\\\OneDrive\\\\Documents\\\\Bootcamp\\\\The_Bridge_Javier\\\\BootCamp_JGAF\\\\week8\\\\day5\\\\data\\\\iris.csv\")\n",
+    "main(option_user='LinearRegression',df=df, target_name='variety', params={'k': 7, 'n_splits': 10, 'random_state': 7})"
    ]
   },
   {
