--- a/week9/day2/exercises/6.flask_pro.ipynb
+++ b/week9/day2/exercises/6.flask_pro.ipynb
@@ -31,7 +31,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Meterse a mirar el archivo HTML de la calse de FLASK de Gabriel y usar el flask del proyecto grupal "
+   ]
   }
  ]
 }
